<resources>
    <string name="app_name">Rt</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
	<string name="title_activity_main">RT</string>
	<string name="main_banner">%1$s, 您好，您现在总共有%2$d份档案。</string>
	<string name="notification">通知总数: 共: %1$s条, 共%1$d页, %3$d条/每页</string>
	<string name="login_failed">亲， 登录失败了!</string>
	<string name="tview_item_num">编号</string>
	<string name="tview_item_sign_time">登记日期</string>
	<string name="tview_item_anl_time">分析日期</string>
	<string name="tview_item_name">姓名</string>
	<string name="tview_item_gender">性别</string>
	<string name="tview_item_age">年龄</string>
	<string name="tview_item_addr">地区</string>
	<string name="tview_item_anl_status">分析状态</string>
	<string name="tview_item_handle_status">处理状态</string>
	<string name="tview_item_signature">签名</string>
	<string name="tview_must_fill">必填信息</string>
	<string name="tview_optional_fill">选填信息</string>
	<string name="tview_customer_name">姓名: </string>
	<string name="tview_customer_gender">性别: </string>
	<string name="tview_customer_age">年龄: </string>
	<string name="tview_customer_temperature">环境温度: </string>
	<string name="tview_customer_address">地址: </string>
	<string name="tview_customer_occupation">职业: </string>
	<string name="get_pic">手图采集</string>
	<string name="chose_occupation">请选择择职业</string>
	<string name="chose_temperature">请选择温度</string>
	<string name="chose_health_his">请选择健康史</string>
	<string name="chose_environment">请选择居住环境</string>
	<string name="chose_province">请选择省份</string>
	<string name="chose_city">请选择城市</string>
	<string name="chose_contry">请选择区县</string>
	<string name="connect_failed">亲，连接失败了，请稍后再次尝试吧!</string>
    <string name="connect_time_out">亲，连接超时了，请稍后再次尝试吧!</string>
    <string name="acount_pwd_not_alowed_to_null">用户名或密码不能为空！</string>
	<string name="must_fill_not_to_be_null">必填内容不能为空！</string>
	<string name="must_fill_pic_not_to_be_null">请输入手图！</string>
	<string name="pic_format">图片只能是jpg,jpeg或png格式！</string>
	<string name="down_img_failed">图片下载失败， 请重试...</string>
	<string name="archive_delete_success">删除成功! </string>
	<string name="on_line_status">分析师状态: </string>
	<string name="on_line_status_off">离线</string>
	<string name="on_line_status_on">在线</string>
	<string name="setting_account_str">帐  户</string>
	<string name="setting_file_manager_str">档案管理</string>
	<string name="setting_consult_manager_str">咨询管理</string>
	<string name="setting_help_str">帮  助</string>
	<string name="setting_about_str">关  于</string>
	<string name="wview_service_str">康客客服</string>
	<string name="wview_qq_str">QQ 客服</string>
	<string name="wview_market_str">手诊超市</string>
	<string name="wview_website_str">手诊网站</string>
	<string name="wview_forum_str">手诊论坛</string>
	<string name="wview_kk_website_str">康客网站</string>
	<string name="error_login">亲，网络不稳定！登陆失败了...</string>
	<string name="error_registe">亲，网络不稳定！操作失败了...</string>
	<string name="incurrent_phone">亲，电话号码格式不正确哦!</string>
	<string name="incurrent_mobile">亲，手机号码格式不正确哦!</string>
	<string name="incurrent_email">亲，电子邮箱格式不正确哦!</string>
	<string name="incurrent_constante_pw">两次密码不一致！</string>
	<string name="common_net_error">亲，网络不稳定！请稍后再尝试吧。</string>
	<string name="sdcard_not_ready">亲，sdcard正在使用中，请断开吧。</string>
	<string name="submitting_data">亲，正在努力提交数据中, 请稍等吧...</string>
	<string name="submitting_pic">亲，数据已提交完毕, 现在开始提交图片, 请稍等吧...</string>
	<string name="check_in_success">亲，您已登记成功！</string>
	<string name="check_in_pic_upload_failed">亲，上传手图失败了！</string>
	<string name="server_error">服务器内部错误： </string>
	<string name="connection_timetout">连接超时！</string>
	<string name="socket_connection_timeout">套接字连接超时！ </string>
	<string name="server_exception">无法连接到服务器，可能您没有将此设备连接到wifi或者不能正常上网！ </string>
	<string name="protocol_exception">客户端协议异常！ </string>
	<string name="io_exception">Socket连接错误！ </string>
	<string name="exception">发生异常！ </string>
	<string name="please_wait">请稍等...</string>
	<string name="your_account">注册成功，请牢记您的账号：</string>
	<string name="you_are_qiut">你确定要退出吗？</string>
	<string name="not_null">内容必须填写完整。</string>
	<string name="modify_success">修改成功！</string>
	<string name="year">年</string>
	<string name="mounth">月</string>
	<string name="day">日</string>
	<string name="setting_help_operation_flow_url">http://www.hdkk.org/Article/ShowClass.asp?ClassID=2</string>
	<string name="setting_help_login_url">http://www.hdkk.org/kklogin.asp</string>
	<string name="tencent_qq_url">http://mobile.qq.com/android/</string>
	<string name="notification_template">尊敬的手道康用户，您的档案已经分析,点击查看详情。</string>
	<string name="notification_title">尊敬的手道康用户： </string>
	<string name="notification_content">您的档案已经分析,点击查看详情。</string>
	<string name="about_content">手诊康客系统介绍
手诊康客系统是借助互联网或手机上网，拍摄患者手部图片，上传给手诊康客系统服务端进行在线手诊分析，健康咨询，养生指导的一种软件工具。
手诊康客系统具备下列特点：
（1） 网络在线手诊，方便、快捷；
（2） 通过手诊健康咨询，有的放矢，针对性强；
（3） 根据手诊结果，进行有效的健康管理或养生指导；
（4） 手诊分析采用智能分析与手工分析相结合，并采用独创的手诊软件分析与超强纠错技术，分析的结果更加接近真实、自然，避免主观因素的干扰；
（5） 无需专业学习，只需30分钟的简单理解，即可流畅操作；
（6） 手诊分析、学习咨询、专业提升，尽在一线之间；
（7） 永远免费的手诊在线服务将永恒持久；
（8） 尊贵的会员级别服务，使你的身份、地位彰显，超值的服务非同一般；
（9） 行业的针对性较强，也可以因人、因地、因时，措施灵活，尤其对公司的品牌创建、培训服务、售后服务、健康管理，更是绝佳的帮手；
（10） 手诊康客系统的运作实行一级代理制，绝无多层次管理，更无双轨式运作，管理、运作、服务、分红，一目了然，胸有成竹；
（11） 广告投放精准到位，尤其是健康、保健、养生、管理、品牌培养、企业文化建设，更是不可多得的辅助工具；
（12） 康客号与手机号合二为一，简单易记，使用方便，功能强大；
（13） 投资手诊康客系统功在当代，利在千秋，利润回报源源不断；
（14） 加盟手诊康客系统运作，心系百姓，造福一方；零成本运作，低风险收入；
（15） 强大的客户档案管理，使你的客户信息永不丢失；企业内部或自拟方案，将根据手诊分析结果而进行智能分析匹配，突出专业、智能、人性化的网络服务特色。</string>
	<string name="male">男</string>
	<string name="female">女</string>
	 <string-array name="temperature_item">
        <item>0摄氏度一下</item>
        <item>10-20摄氏度</item>
        <item>20-30摄氏度</item>
        <item>30摄氏度以上</item>
    </string-array>
	<string-array name="occupation_item">
        <item>基本农民</item>
        <item>临床医生</item>
        <item>一般工人</item>
        <item>在校教师</item>
        <item>在校学生</item>
        <item>政府部门</item>
        <item>电脑电子</item>
        <item>美容美发</item>
        <item>健康保健</item>
        <item>娱乐服务</item>
        <item>餐饮饭店</item>
        <item>其他行业</item>
    </string-array>
	<string-array name="health_item">
        <item>几年前做过手术</item>
        <item>一旦患病恢复较慢</item>
        <item>每年流感较难避免</item>
        <item>非常健康基本无病</item>
        <item>身体健康，很少患病</item>
        <item>大病不患，小病不断</item>
        <item>身体有慢性疾病存在</item>
        <item>身体呈阶段性时好时坏</item>
    </string-array>
	<string-array name="environment_item">
        <item>环境干燥</item>
        <item>环境潮湿</item>
        <item>环境寒冷</item>
        <item>环境炎热</item>
        <item>空气污染</item>
        <item>噪音干扰</item>
        <item>环境安静</item>
        <item>空气新鲜</item>
    </string-array>
    <string-array name="province_item">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">   
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">    
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">    
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">    
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item"> 
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">    
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">          
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">  
        <item>上海</item>
    </string-array>
    <string-array name="jiangsu_province_item">  
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="zhejiang_province_item">   
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>巢湖</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="fujian_province_item">  
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="jiangxi_province_item">   
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
</resources>